[gd_scene load_steps=8 format=3 uid="uid://cyblc5357jbqn"]

[ext_resource type="Theme" uid="uid://dkrs350vaq2kh" path="res://addons/RPGMap/Assets/Themes/dialog_theme.tres" id="1_6npgq"]
[ext_resource type="Script" uid="uid://d0krc5fdv2sw8" path="res://addons/CustomControls/Dialogs/select_blend_mode_dialog.gd" id="2_fg5v7"]
[ext_resource type="PackedScene" uid="uid://bealtmarqhbfs" path="res://addons/CustomControls/custom_option_button.tscn" id="3_0kkkd"]
[ext_resource type="PackedScene" uid="uid://bnx7omk3joxly" path="res://addons/CustomControls/custom_button.tscn" id="4_7kneq"]

[sub_resource type="Gradient" id="Gradient_vvvrv"]
colors = PackedColorArray(0.184314, 0.2, 0.207843, 1, 0.278431, 0.294118, 0.301961, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ykjfa"]
gradient = SubResource("Gradient_vvvrv")
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_aipxk"]

[node name="SelectBlendModeDialog" type="Window"]
title = "Select Blend Mode"
position = Vector2i(0, 36)
size = Vector2i(380, 137)
transient = true
exclusive = true
unresizable = true
theme = ExtResource("1_6npgq")
script = ExtResource("2_fg5v7")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_ykjfa")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Number:"

[node name="BlendMode" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_0kkkd")]
unique_name_in_owner = true
material = SubResource("CanvasItemMaterial_aipxk")
layout_mode = 2
tooltip_text = "[ul]- \"Mix\" Mix blending mode. Colors are assumed to be independent of the alpha (opacity) value.
- \"Add\" Additive blending mode.
- \"Subtract\" Subtractive blending mode.
- \"Multiply\" Multiplicative blending mode.
- \"Premult Alpha\" Mix blending mode. Colors are assumed to be premultiplied by the alpha (opacity) value."
selected = 0
item_count = 5
popup/item_0/text = "Mix"
popup/item_1/text = "Add"
popup/item_1/id = 1
popup/item_2/text = "Subtract"
popup/item_2/id = 2
popup/item_3/text = "Multiply"
popup/item_3/id = 3
popup/item_4/text = "PreMult Alpha"
popup/item_4/id = 4

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/separation = 12

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
alignment = 2

[node name="OKButton" parent="MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("4_7kneq")]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "[title]Ok[/title]
Saves all changes and closes the windows."
text = "OK"

[node name="CancelButton" parent="MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("4_7kneq")]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "[title]Cancel[/title]
Closes this window without saving any changes."
text = "CANCEL"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/OKButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/CancelButton" to="." method="_on_cancel_button_pressed"]
